[tool.poetry]
name = "jupyer-pytest-api-examples"
version = "1.0.0"
description = "Jupyter notebook with pytest examples"
authors = ["y"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"
jupyter = "^1.0.0"
pandas = "^1.2.0"
nbconvert = "^6.0.7"
black = "^20.8b1"
ipytest = "^0.9.1"
jupytext = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
